# tg_task_tracker

./: LICENSE  pyproject.toml  schema.yml
api/: serializers.py  urls.py  views.py
tasks/: models.py
tasks/migrations/: 0001_initial.py
telegram_bot/: bot.py  config.py  services.py
telegram_bot/models/: models.py
tracker/: settings.py  urls.py
